--- a/_includes/footer-widgets/widget-subscribe.html
+++ b/_includes/footer-widgets/widget-subscribe.html
@@ -2,7 +2,7 @@
 <div class="col col-4 col-d-6 col-t-12">
   <div class="widget widget-subscribe">
     <div class="widget__head">
-      <h4 class="widget__title">Get Interesting News</h4>
+      <h4 class="widget__title">Never miss an article!</h4>
     </div>
     {% if site.mailchimp-text %}
     <p class="subscribe-subtitle">{{site.mailchimp-text}}</p>
