edited newsletter groups

--- a/_includes/footer-widgets/widget-subscribe-post.html
+++ b/_includes/footer-widgets/widget-subscribe-post.html
@@ -19,7 +19,12 @@
 			<label class="screen-reader-text" for="mce-NAME">Name</label>
 			<input class="subscribe-email" type="text" name="NAME" placeholder="Name" id="mce-NAME">
 		</div>
-		<div>
+		<div style="display:None">
+		    <ul>
+    		<li><input type="checkbox" value="1" name="group[378690][1]" id="mce-group[378690]-378690-0" checked><label for="mce-group[378690]-378690-0">English</label></li>
+			<li><input type="checkbox" value="2" name="group[378690][2]" id="mce-group[378690]-378690-1"><label for="mce-group[378690]-378690-1">Mongolian</label></li>
+			</ul>
+		</div>
 			<button class="subscribe-button button button--primary" id="membedded-subscribe" type="submit"
 				name="subscribe">Subscribe</button>
 		</div>
