--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,6 +41,10 @@ layout: default
         <div class="post__content">
           {{ content }}
         </div>
+        
+        <div>
+        {% include footer-widgets/widget-subscribe.html %}
+        </div>
 
         <div class="post__share">
           <ul class="share__list list-reset">
